--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </ul>
     </header>
     <section>
-        <img src="Css/img/marc-olivier-jodoin-MJv31qXqSOU-unsplash.jpg" id="bgImg" alt="">
-        <img src="Css/img/9e0552778514e2b80a7d801be9b79b42-removebg-preview.png" id="vrBoyImg" alt="">
+        <img src="marc-olivier-jodoin-MJv31qXqSOU-unsplash.jpg" id="bgImg" alt="">
+        <img src="9e0552778514e2b80a7d801be9b79b42-removebg-preview.png" id="vrBoyImg" alt="">
         <h2 id="text">UrbanUplift</h2>
         <a href="#sec" id="btn">Explore</a>
     </section>
@@ -46,7 +46,7 @@
     <div class="container">
         <div class="hexagon">
             <div class="shape">
-               <img src="Css/img/WhatsApp Image 2023-10-18 at 12.50.29 PM.jpeg" alt="">
+               <img src="WhatsApp Image 2023-10-18 at 12.50.29 PM.jpeg" alt="">
                 <div class="content">
                     <h2>Green Energy</h2>
                     <p>Green energy, also known as renewable energy, comes from naturally replenished sources like sunlight, wind, and water.</p>
@@ -55,7 +55,7 @@
         </div>
         <div class="hexagon">
             <div class="shape">
-                <img src="Css/img/WhatsApp Image 2023-10-18 at 12.55.37 PM.jpeg" alt="">
+                <img src="WhatsApp Image 2023-10-18 at 12.55.37 PM.jpeg" alt="">
                 <div class="content">
                     <h2 style="font-size: 18px;">Waste Management</h2>
                     <p style="font-size: 13px;">Smart waste management employs IoT and sensors to optimize waste collection. Real-time data enables efficient routes, reduces costs, promotes recycling, and engages communities, contributing to sustainable and cleaner cities.</p>
@@ -64,7 +64,7 @@
         </div>
         <div class="hexagon">
             <div class="shape">
-                <img src="Css/img/WhatsApp Image 2023-10-18 at 12.55.38 PM.jpeg" alt="">
+                <img src="WhatsApp Image 2023-10-18 at 12.55.38 PM.jpeg" alt="">
                 <div class="content">
                     <h2>Air Polltion</h2>
                     <p style="font-size: 13px;">It can be prevented by advocating the use of public transport and carpooling. it can also be controlled by avoiding wastage of electricity and practicing reuse and recycling of compatiable products.</p>
